...
                android:layout_marginBottom="8dp"
                android:background="@drawable/call_button"
                android:contentDescription="@string/call_button_desc"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/infoButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_call" />


...
